<resources>
    <string name="app_name">Cat Shop</string>
    <string name="your_name">Введите ваше имя</string>
    <string name="todo">TODO</string>
    <string name="select">Выберите породу</string>
    <string name="procent">Скидка -30%</string>
    <string name="_0">0 $</string>
    <string name="order_price">Сумма</string>
    <string name="quantity">Количество</string>
    <string name="minusString">-</string>
    <string name="plusString">+</string>
    <string name="add_to_cart">Добавить в корзину</string>
    <string name="your_order">Ваш заказ</string>
    <string name="send_order">Отправить ваш заказ</string>
</resources>
