<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="123dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/cat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/aclonica"
            android:text="@string/procent"
            android:textColor="#FFEBEE"
            android:textSize="28sp"
            android:rotation="-25"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:text="@string/select"
        android:textColor="@android:color/widget_edittext_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:spinnerMode="dropdown" />

    <ImageView
        android:id="@+id/priceImage"
        android:layout_gravity="center"
        android:layout_width="120dp"
        android:scaleType="centerCrop"
        android:layout_height="120dp"
        app:srcCompat="@drawable/cat"
        android:contentDescription="@string/todo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/order_price"
            android:textColor="@android:color/primary_text_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text1"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/_0"
            android:textColor="@android:color/widget_edittext_dark"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_toEndOf="@id/text1"
            android:text="@string/quantity"
            android:textColor="@android:color/primary_text_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/minusButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="240dp"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@id/priceTextView"
            android:background="@color/colorPrimaryDark"
            android:onClick="minus"
            android:text="@string/minusString"
            android:textColor="@android:color/primary_text_dark" />
        <TextView
            android:id="@+id/countTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/minusButton"
            android:layout_marginStart="10dp"
            android:layout_marginTop="35dp"
            android:textColor="@android:color/widget_edittext_dark"
            android:textSize="22sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/plusButton"
            android:layout_toEndOf="@id/countTextView"
            android:onClick="plus"
            android:layout_marginStart="10dp"
            android:text="@string/plusString"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="30dp"
            android:textColor="@android:color/primary_text_dark"
            android:layout_width="40dp"
            android:layout_height="40dp"
            />

    </RelativeLayout>
    <Button
        android:id="@+id/addToCart"
        android:onClick="addToCart"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/add_to_cart"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/primary_text_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>